--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         .container .hero {
             margin-left: 0;
             margin-right: 0;
-            width: 100%;
+            width: 100% + 150px;
             border-radius: 0;
         }
         
@@ -103,7 +103,7 @@
         /* Hero Section - CORRECTION POUR MOBILE */
         .hero {
             position: relative;
-            height: 60vh; /* Réduit la hauteur pour mobile */
+            height: 93vh; /* Réduit la hauteur pour mobile */
             background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0)), 
                         url('hero.png');
             background-size: cover;
@@ -123,6 +123,8 @@
             max-width: 800px;
             padding: 20px;
             padding-top: 0; /* Supprimé le padding-top fixe */
+            padding-top: 380px;
+            padding-left: 99px;
         }
         
         .btn {
@@ -2160,3 +2162,4 @@
     </script>
 </body>
 </html>
+
