--- a/index.html
+++ b/index.html
@@ -755,6 +755,8 @@
             <!-- Hero Section -->
             <div class="hero">
                 <div class="hero-content">
+                    <h1>WELCOME TO<br>   Moon shop
+                    <h4>Découvrez des produits incroyables à<br>des prix imbattables. Qualité et <br>satisfaction garanties..</h4>
                     <a href="#order" class="btn nav-link">commandez MAINTENANT</a>
                 </div>
             </div>
@@ -2162,4 +2164,5 @@
     </script>
 </body>
 </html>
+
 
