--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         
         /* CORRECTION HERO MOBILE */
         .container .hero {
-            margin-left: 0;
-            margin-right: 0;
+            margin-left: -80px;
+            margin-right: -80px;
             width: 100% + 150px;
             border-radius: 0;
         }
@@ -108,20 +108,19 @@
                         url('hero.png');
             background-size: cover;
             background-position: center;
-            background-repeat: no-repeat;
+
             display: flex;
-            align-items: center;
-            justify-content: center;
+
+
             text-align: center;
             color: white;
-            margin-bottom: 60px; /* Réduit la marge pour mobile */
+            margin-bottom: 120px; /* Réduit la marge pour mobile */
             border-radius: 0;
-            padding: 20px;
         }
         
         .hero-content {
             max-width: 800px;
-            padding: 20px;
+            padding: 0 20px;
             padding-top: 0; /* Supprimé le padding-top fixe */
             padding-top: 380px;
             padding-left: 99px;
@@ -2164,5 +2163,6 @@
     </script>
 </body>
 </html>
+
 
 
