--- a/index.html
+++ b/index.html
@@ -122,8 +122,13 @@
             max-width: 800px;
             padding: 0 20px;
             padding-top: 0; /* Supprimé le padding-top fixe */
-            padding-top: 380px;
+            padding-top: 180px;
             padding-left: 99px;
+        }
+        .hero p{
+            padding-left:80px;
+            padding-bottom:80px;
+         
         }
         
         .btn {
@@ -754,8 +759,8 @@
             <!-- Hero Section -->
             <div class="hero">
                 <div class="hero-content">
-                    <h1>WELCOME TO<br>   Moon shop
-                    <h4>Découvrez des produits incroyables à<br>des prix imbattables. Qualité et <br>satisfaction garanties..</h4>
+                    <h0>WELCOME TO<br>            Moon shop</h0>
+                    <h4>Découvrez des produits incroyables à<br>des prix imbattables. Qualité et <br>  satisfaction garanties..</h4>
                     <a href="#order" class="btn nav-link">commandez MAINTENANT</a>
                 </div>
             </div>
@@ -2163,6 +2168,7 @@
     </script>
 </body>
 </html>
+
 
 
 
