--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         /* Hero Section - CORRECTION POUR MOBILE */
         .hero {
             position: relative;
-            height: 93vh; /* Réduit la hauteur pour mobile */
+           /* Réduit la hauteur pour mobile */
             background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0)), 
                         url('hero.png');
             background-size: cover;
@@ -119,7 +119,7 @@
         }
         
         .hero-content {
-            max-width: 800px;
+            max-width: 100%;
             padding: 0 20px;
             padding-top: 0; /* Supprimé le padding-top fixe */
             padding-top: 180px;
@@ -2168,6 +2168,7 @@
     </script>
 </body>
 </html>
+
 
 
 
