--- a/index.html
+++ b/index.html
@@ -103,16 +103,13 @@
         /* Hero Section - CORRECTION POUR MOBILE */
         .hero {
             position: relative;
-            height: 60vh; /* Réduit la hauteur pour mobile */
+            height: 73vh; /* Réduit la hauteur pour mobile */
             background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0)), 
                         url('hero.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
             display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
             color: white;
             margin-bottom: 60px; /* Réduit la marge pour mobile */
             border-radius: 0;
@@ -121,10 +118,19 @@
         
         .hero-content {
             max-width: 800px;
-            padding: 20px;
+            padding-left: 77px;
             padding-top: 0; /* Supprimé le padding-top fixe */
         }
-        
+        .hero h2{
+            font-size: 55px;
+            font-family: 'Bogart';
+        }
+        .hero p{
+            padding-left: 50px;
+            padding-bottom: 20px;
+            font-size: 21px;
+            font-family: 'Dm sans';
+        }
         .btn {
             display: inline-block;
             background-color: #478AC9;
@@ -753,6 +759,8 @@
             <!-- Hero Section -->
             <div class="hero">
                 <div class="hero-content">
+                    <h2>welcome to <br> MOON STORE</h2>
+                    <p>Découvrez des produits incroyables à <br>des prix imbattables. Qualité et<br> satisfaction garanties..</p>
                     <a href="#order" class="btn nav-link">commandez MAINTENANT</a>
                 </div>
             </div>
@@ -2160,6 +2168,7 @@
     </script>
 </body>
 </html>
+
 
 
 
