--- a/index.html
+++ b/index.html
@@ -118,12 +118,13 @@
         
         .hero-content {
             max-width: 800px;
-            padding-left: 77px;
+            padding-left: 42px;
             padding-top: 0; /* Supprimé le padding-top fixe */
         }
         .hero h2{
-            font-size: 55px;
+            font-size: 42px;
             font-family: 'Bogart';
+            line-height: 69px;
         }
         .hero p{
             padding-left: 50px;
@@ -2168,6 +2169,7 @@
     </script>
 </body>
 </html>
+
 
 
 
